@@ -1,7 +1,8 @@
 0.1.5
+- Values panel made editable
+- Byte order support for floating point numbers in values panel
 - Added thread for values panel updating
 - Fixed files closing on window closing
-- Byte order support for floating point numbers in values panel
 
 0.1.4 (2017-04-01)
 - Fixed behavior for high precision wheel scrolling
